# local-toolbox

./: .gitignore  README.md  cube.md  docker-compose.yaml  streamlit.md
airflow/: Dockerfile
airflow/config/: pipeline_config.yaml
airflow/dags/: etl_pokedex.py  extractors.py  loaders.py
airflow/dbt-requirements/: pyproject.toml
cube/: cube.js
cube/.cubestore/data/cachestore/: 000010.sst  IDENTITY  LOG.old.1768854149585992  LOG.old.1768854459184067  LOG.old.1768854731166130  LOG.old.1768856522431758  LOG.old.1768856598571092  LOG.old.1768906875911999  MANIFEST-000042
cube/.cubestore/data/metastore/: 000008.sst  IDENTITY  LOG.old.1768854134427389  LOG.old.1768854444087465  LOG.old.1768854716048582  LOG.old.1768856507328135  LOG.old.1768856583460158  LOG.old.1768906860824994  MANIFEST-000030
cube/model/: mart_pokedex.js
data/: airflow.db
data/raw/: pokemon.json  types.json
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/: mart_pokedex.sql
dbt_project/models/staging/: stg_pokemon.sql  stg_types.sql
dwh/: pokedex.duckdb
streamlit/: Dockerfile  app.py  cube_client.py  llm_client.py  pyproject.toml
